@@ -2,6 +2,9 @@
 \alias{Boxplot}
 \alias{Boxplot.default}
 \alias{Boxplot.formula}
+\alias{Boxplot.list}
+\alias{Boxplot.data.frame}
+\alias{Boxplot.matrix}
 
 \title{
 Boxplots With Point Identification
@@ -20,10 +23,18 @@ Boxplot(y, ...)
 
 \method{Boxplot}{formula}(formula, data = NULL, subset, na.action = NULL, labels., 
     id.method = c("y", "identify", "none"), xlab, ylab, ...)
+
+\method{Boxplot}{list}(y, xlab="", ylab="", ...)
+
+\method{Boxplot}{data.frame}(y, ...)
+
+\method{Boxplot}{matrix}(y, ...)
 }
 
 \arguments{
-  \item{y}{a numeric variable for which the boxplot is to be constructed.}
+  \item{y}{a numeric variable for which the boxplot is to be constructed; a list of numeric
+    variables, each element of which will be treated as a group; a numeric data frame or a
+    numeric matrix, each of whose columns will be treated as a group.}
   \item{g}{a grouping variable, usually a factor, for constructing parallel boxplots.}
   \item{labels, labels.}{point labels; if not specified, \code{Boxplot} will use the row names of the \code{data}
     argument, if one is given, or observation numbers.}
@@ -31,7 +42,7 @@ Boxplot(y, ...)
     may be labeled interactive; if \code{"none"}, no point identification is performed.}
   \item{id.n}{up to \code{id.n} high outliers and low outliers will be identified in each group, (default, 10).}
   \item{xlab, ylab}{text labels for the horizontal and vertical axes; if missing, \code{Boxplot} will use the
-    variable names.}
+    variable names, or, in the case of a list, data frame, or matrix, empty labels.}
   \item{formula}{a `model' formula, of the form \code{~ y} to produce a boxplot for the variable \code{y}, or
     of the form \code{y ~ g}, \code{y ~ g1*g2*...}, or \code{y ~ g1 + g2 + ...} to 
     produce parallel boxplots for \code{y} within levels of the grouping variable(s)
@@ -59,6 +70,7 @@ Boxplot(income ~ type, data=Prestige, at=c(1, 3, 2))
 Boxplot(k5 + k618 ~ lfp*wc, data=Mroz)
 with(Prestige, Boxplot(income, labels=rownames(Prestige)))
 with(Prestige, Boxplot(income, type, labels=rownames(Prestige)))
+Boxplot(scale(Prestige[, 1:4]))
 }
 
 \keyword{hplot}
